# overseer

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/overseer-cli/: Cargo.toml
crates/overseer-cli/src/: cli.rs  context.rs  logging.rs  main.rs  ui.rs
crates/overseer-cli/src/commands/: conflicts.rs  demo.rs  deploy.rs  doctor.rs  downloads.rs  exe.rs  install.rs  instance.rs  launch.rs  merge.rs  mod.rs  mods.rs  patch.rs  plugins.rs  profile.rs  saves.rs
crates/overseer-cli/src/commands/tests/: lifecycle.rs  patch.rs
crates/overseer-cli/src/tests/: ui.rs
crates/overseer-cli/tests/: cli_e2e.rs
crates/overseer-core/: Cargo.toml  README.md
crates/overseer-core/src/: archive.rs  ba2.rs  error.rs  f4se.rs  fs.rs  game.rs  ini.rs  launch.rs  lib.rs  lock.rs  merge.rs  restore.rs  saves.rs  separator.rs  settings.rs  test_support.rs
crates/overseer-core/src/apply/: error.rs  lock.rs  mod.rs  ops.rs  outcome.rs  preparation.rs  state.rs
crates/overseer-core/src/apply/tests/: ops.rs  preparation.rs  state.rs
crates/overseer-core/src/deploy/: conflict.rs  deployer.rs  error.rs  hardlink.rs  layout.rs  manifest.rs  mod.rs  plan.rs  process.rs  progress.rs  projfs.rs  record.rs  usvfs.rs
crates/overseer-core/src/deploy/tests/: conflict.rs  error.rs  hardlink.rs  plan.rs  record.rs
crates/overseer-core/src/detect/: fallout4.rs  mod.rs
crates/overseer-core/src/detect/tests/: detect.rs  fallout4.rs
crates/overseer-core/src/install/: archive.rs  downloads.rs  error.rs  installer.rs  mod.rs  root.rs
crates/overseer-core/src/install/tests/: archive.rs  downloads.rs  installer.rs  root.rs
crates/overseer-core/src/instance/: error.rs  mod.rs  model.rs  profile.rs
crates/overseer-core/src/instance/tests/: model.rs  profile.rs
crates/overseer-core/src/launch/: marker.rs
crates/overseer-core/src/lifecycle/: archive.rs  bundle.rs  error.rs  failpoint.rs  install.rs  journal.rs  mod.rs  recovery.rs  remove.rs  rename.rs  replace.rs
crates/overseer-core/src/lifecycle/tests/: archive.rs  archive_copy.rs  guards.rs  install.rs  lifecycle.rs  reinstall.rs  replace.rs  rollback.rs  success.rs  support.rs
crates/overseer-core/src/merge/: mod.rs  transaction.rs
crates/overseer-core/src/merge/tests/: transaction.rs
crates/overseer-core/src/patch/: delta.rs  engine.rs  fallout4.rs  fingerprint.rs  mod.rs  vcdiff.rs
crates/overseer-core/src/patch/fallout4/: ba2.rs  catalog.rs  convert.rs  dlc.rs  engine.rs  fingerprint.rs  mod.rs  vcdiff.rs
crates/overseer-core/src/patch/fallout4/cc/: catalog.rs  cc_catalog.txt  mod.rs
crates/overseer-core/src/patch/fallout4/tests/: ba2.rs  convert.rs  dlc.rs  fingerprint.rs  vcdiff.rs
crates/overseer-core/src/patch/tests/: delta.rs  engine.rs  fingerprint.rs  patch.rs  vcdiff.rs
crates/overseer-core/src/plugins/: carrier.rs  discover.rs  error.rs  gamestate.rs  graph.rs  load_order.rs  loadorder.rs  metadata.rs  mod.rs  provider.rs  separator.rs  test_support.rs  validate.rs
crates/overseer-core/src/plugins/tests/: carrier.rs  discover.rs  error.rs  gamestate.rs  load_order.rs  metadata.rs  provider.rs  separator.rs  validate.rs
crates/overseer-core/src/saves/: error.rs  info.rs  mod.rs  redirect.rs
crates/overseer-core/src/saves/tests/: info.rs  redirect.rs
crates/overseer-core/src/tests/: archive.rs  ba2.rs  f4se.rs  fs.rs  game.rs  ini.rs  launch.rs  merge.rs  settings.rs
crates/overseer-core/tests/: generate_testbed.rs  hardlink_deploy.rs  instance_pipeline.rs  live_install.rs  live_mo2.rs  testbed_e2e.rs  vcdiff_adapter_e2e.rs
crates/overseer-diagnostics/: Cargo.toml
crates/overseer-diagnostics/src/: binaries.rs  context.rs  error.rs  finding.rs  lib.rs  report.rs
crates/overseer-diagnostics/src/checks/: archive_names.rs  archives.rs  binaries.rs  creation_club.rs  dlc_consistency.rs  f4se.rs  header_versions.rs  ini_config.rs  loose_files.rs  loose_folders.rs  missing_masters.rs  mod.rs  plugin_count.rs  plugin_order.rs  plugins.rs  race_subgraphs.rs  script_overrides.rs
crates/overseer-diagnostics/src/checks/tests/: archive_names.rs  archives.rs  binaries.rs  checks.rs  creation_club.rs  dlc_consistency.rs  f4se.rs  header_versions.rs  ini_config.rs  loose_files.rs  loose_folders.rs  missing_masters.rs  plugin_count.rs  plugin_order.rs  plugins.rs  race_subgraphs.rs  script_overrides.rs
crates/overseer-diagnostics/src/tests/: binaries.rs  context.rs  report.rs
crates/overseer-diagnostics/tests/: generated_diag.rs
crates/overseer-frontend/: Cargo.toml
crates/overseer-frontend/src/: diagnostics.rs  error.rs  lib.rs  logging.rs  style.rs
crates/overseer-frontend/src/tests/: diagnostics.rs  style.rs
crates/overseer-tui/: Cargo.toml
crates/overseer-tui/src/: app.rs  cli.rs  logging.rs  main.rs  test_support.rs  theme.rs  ui.rs
crates/overseer-tui/src/app/: input.rs  launch.rs  list.rs  mod.rs  modal.rs  popup.rs  sort.rs
crates/overseer-tui/src/app/input/: actions.rs  command.rs  confirm.rs  doctor.rs  downloads.rs  info.rs  mod.rs  overlay.rs  plugins.rs  prompt.rs  saves.rs  select.rs
crates/overseer-tui/src/app/input/tests/: actions.rs  command.rs  confirm.rs  doctor.rs  downloads.rs  info.rs  input.rs  plugins.rs  prompt.rs  saves.rs  select.rs
crates/overseer-tui/src/app/operation/: mod.rs  progress.rs  protocol.rs  reducer.rs  runner.rs
crates/overseer-tui/src/app/operation/jobs/: conflicts.rs  deployment.rs  doctor.rs  downloads.rs  install.rs  launch.rs  mod.rs  remove.rs  replace.rs  saves.rs
crates/overseer-tui/src/app/operation/tests/: progress.rs  protocol.rs  reducer.rs  runner.rs
crates/overseer-tui/src/app/pane/: mod.rs  mods.rs  plugins.rs
crates/overseer-tui/src/app/pane/tests/: mods.rs  plugins.rs
crates/overseer-tui/src/app/tests/: app.rs  launch.rs  list.rs  modal.rs  sort.rs
crates/overseer-tui/src/tests/: theme.rs
crates/overseer-tui/src/ui/: doctor.rs  help.rs  launcher.rs  mod.rs  modal.rs  operation.rs  overlay.rs  settings.rs
crates/overseer-tui/src/ui/tests/: doctor.rs  operation.rs  ui.rs
(+14 files in other folders)
