[workspace]
resolver = "2"
members = ["crates/overseer-core", "crates/overseer-cli"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kuz"]
rust-version = "1.96"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
sevenz-rust = "0.6"
zip = "2"
esplugin = "6.1"
toml = "0.8"
libloadorder = "18.8"
atomicwrites = "0.4"
