[workspace]
resolver = "2"
members = ["crates/overseer-core", "crates/overseer-cli", "crates/overseer-diagnostics", "crates/overseer-frontend", "crates/overseer-tui"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kuz"]
rust-version = "1.96"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
sevenz-rust = "0.6"
zip = "2"
esplugin = "6.1"
toml = "0.8"
libloadorder = "18.8"
atomicwrites = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
ratatui = "0.30"
assert_cmd = "2"
predicates = "3"
