[package]
name = "overseer-core"
description = "Core domain logic for the Overseer Fallout 4 mod manager."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
walkdir.workspace = true
serde.workspace = true
camino.workspace = true
sevenz-rust.workspace = true
zip.workspace = true
tempfile.workspace = true
esplugin.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
