[package]
name = "overseer-core"
description = "Core domain logic for the Overseer Fallout 4 mod manager."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
walkdir.workspace = true
same-file.workspace = true
serde.workspace = true
camino.workspace = true
sevenz-rust2.workspace = true
zip.workspace = true
tempfile.workspace = true
esplugin.workspace = true
toml.workspace = true
serde_json.workspace = true
libloadorder.workspace = true
atomicwrites.workspace = true
dirs.workspace = true
crc32fast.workspace = true
pelite.workspace = true
tracing.workspace = true

[features]
# Exposes `test_support` to integration tests and dependent crates' test builds.
test-support = []

[dev-dependencies]
# Enables the `test-support` feature for this crate's own integration tests.
overseer-core = { path = ".", features = ["test-support"] }
dotenvy.workspace = true
