[package]
name = "overseer-tui"
description = "Terminal UI front end for the Overseer Fallout 4 mod manager."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "overseer-tui"
path = "src/main.rs"

[dependencies]
overseer-frontend = { path = "../overseer-frontend" }
overseer-core = { path = "../overseer-core" }
overseer-diagnostics = { path = "../overseer-diagnostics" }
anyhow.workspace = true
ratatui.workspace = true
tracing.workspace = true
camino.workspace = true

[dev-dependencies]
# Enables core's `test_support` (e.g. `temp_instance`) for on-disk TUI tests only.
overseer-core = { path = "../overseer-core", features = ["test-support"] }
